--- a/mesa.html
+++ b/mesa.html
@@ -20,7 +20,7 @@
 </header>
 
 <section class="cover">
-    <img src="../img/mesa.jpg" alt="Mesa Rústica">
+    <img src="mesa.jpg" alt="Mesa Rústica">
 </section>
 
 <section class="about">
